# src/api/memos/find/$api.ts
@@ -1,34 +1,0 @@
-/* eslint-disable */
-// prettier-ignore
-import type { AspidaClient, BasicHeaders } from 'aspida'
-// prettier-ignore
-import { dataToURLString } from 'aspida'
-// prettier-ignore
-import type { Methods as Methods0 } from '.'
-
-// prettier-ignore
-const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
-  const prefix = (baseURL === undefined ? 'http://localhost:3000/api/' : baseURL).replace(/\/$/, '')
-  const PATH0 = '/memos/find'
-  const GET = 'GET'
-
-  return {
-    /**
-     * @returns IDで指定されたメモを返します。
-     */
-    get: (option: { query: Methods0['get']['query'], config?: T }) =>
-      fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json(),
-    /**
-     * @returns IDで指定されたメモを返します。
-     */
-    $get: (option: { query: Methods0['get']['query'], config?: T }) =>
-      fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json().then(r => r.body),
-    $path: (option?: { method?: 'get'; query: Methods0['get']['query'] }) =>
-      `${prefix}${PATH0}${option && option.query ? `?${dataToURLString(option.query)}` : ''}`
-  }
-}
-
-// prettier-ignore
-export type ApiInstance = ReturnType<typeof api>
-// prettier-ignore
-export default api
